links added to icon for social media

--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,17 +22,17 @@
     <div class="ml-auto">
         <section >
           <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/toppychris/?hl=en" role="button"
             ><i class="bi bi-instagram"></i
             ></a>
       
           <!-- Linkedin -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/toppy007/covered-flask-python-app" role="button"
             ><i class="bi bi-linkedin"></i
           ></a>
       
           <!-- Github -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/christopher-toplisek-45372b30/" role="button"
             ><i class="bi bi-github"></i>
           </a>
         </section>
