--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,12 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-    %}
+{% extends "base.html" %}  
+
+{% block content %}
+
+<br />
+  <h1 align="left">Login</h1>
+<br />
+
     <form method="POST">
-      <h3 align="center">Login</h3>
       <div class="form-group">
         <label for="email">Email Address</label>
         <input
