--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,7 +1,13 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-    content %}
+{% extends "base.html" %}
+
+{% block content %}
+
+<br />
+  <h1 align="left">Sign up</h1>
+<br />
+
     <form method="POST">
-      <h3 align="center">Sign Up</h3>
+
       <div class="form-group">
         <label for="email">Email Address</label>
         <input
