added flash message a redirect to home

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -135,5 +135,11 @@
       {% endblock %}
 
       {% include 'footer.html' %}
+
+      <script>
+        function reloadPage() {
+            window.location.reload();
+        }
+    </script>
   </body>
 </html>
