--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -17,7 +17,7 @@
               </div>
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-light mb-4">
+              <button type="submit" class="btn btn-outline-light mb-4" id="registerButton">
                 Register
               </button>
             </div>
