added edit button in the CL

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -3,7 +3,7 @@
 <footer class="bg-dark text-center text-white">
     <div class="container p-3">
       <section>
-        <form action="/submit_form" method="POST">
+        <form method="post" action="/submit_form" id="registrationForm">
           <div class="row justify-content-center">
             <div class="col-auto">
               <p class="pt-2">
@@ -32,3 +32,14 @@
       <a class="text-white" href="https://github.com/toppy007/covered-flask-python-app/blob/main/LICENSE">MIT License Christopher Toplisek</a>
     </div>
   </footer>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('registrationForm').addEventListener('submit', function() {
+          
+            setTimeout(function() {
+                location.reload();
+            }, 3000); 
+        });
+    });
+</script>
