edit and updated session perrameter bug fixed

--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -23,17 +23,17 @@
         <section >
           <!-- Instagram -->
           <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/toppychris/?hl=en" role="button"
-            ><i class="bi bi-instagram"></i
-            ></a>
+            ><i class="bi bi-instagram"></i>
+          </a>
       
           <!-- Linkedin -->
           <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/toppy007/covered-flask-python-app" role="button"
-            ><i class="bi bi-linkedin"></i
-          ></a>
+            ><i class="bi bi-github"></i>
+          </a>
       
           <!-- Github -->
           <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/christopher-toplisek-45372b30/" role="button"
-            ><i class="bi bi-github"></i>
+            ><i class="bi bi-linkedin"></i>
           </a>
         </section>
     </div>
