--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -15,10 +15,10 @@
                         <textarea class="form-control no-border p-0" id="expandingTextarea">{{ covering_letter | escape }}</textarea>
                     </div>
                 </div>
-                <button id="editButton" class="btn btn-primary">
+                <button type='button' id="editButton" class="btn btn-primary">
                     <i class="bi bi-pencil"></i> Edit
                 </button>
-                <button id="saveButton" class="btn btn-success" style="display: none;">Save</button>
+                <button type="button" id="saveButton" class="btn btn-success" style="display: none;" onclick="saveCoveringLetter(document.getElementById('expandingTextarea').value)">Save</button>
             </div>
         </div>
         <br />
@@ -57,6 +57,22 @@
         this.style.height = 'auto';
         this.style.height = this.scrollHeight + 'px';
     });
+
+    function saveCoveringLetter(expandingTextarea) {
+        fetch("/update-covering-letter", {
+            method: "POST",
+            body: JSON.stringify({ covering_letter: expandingTextarea }),
+            headers: {
+                "Content-Type": "application/json",
+            },
+        })
+        .then((_res) => {
+            console.log("Covering letter updated successfully");
+        })
+        .catch((error) => {
+            console.error("Error:", error);
+        });
+    }
 
     editButton.addEventListener('click', enableEditing);
     saveButton.addEventListener('click', saveEditing);
