boxing of loader changed

--- a/website/templates/analysis_create/ana_cre_inputad.html
+++ b/website/templates/analysis_create/ana_cre_inputad.html
@@ -1,8 +1,17 @@
-<div class="container text-center" id='loader' style='display: none;'>
-    <div class='container'style="height: 200px;">
-    <object id="svgObject" type="image/svg+xml" class="img-fluid" width='70%'></object>
+<div class="container text-center" id="loader" style="display: none;">
+    <!-- Animation container -->
+    <div class="row">
+        <div class="col-md-12">
+            <object id="svgObject" type="image/svg+xml" class="img-fluid" width="70%"></object>
+        </div>
     </div>
-    <h3>Analysing please wait...</h3>
+    
+    <!-- Text container -->
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Analysing please wait...</h3>
+        </div>
+    </div>
 </div>
 
 <div id="ana_cre_inputad">
