--- a/website/templates/analysis_create/ana_cre_inputad.html
+++ b/website/templates/analysis_create/ana_cre_inputad.html
@@ -8,7 +8,7 @@
     
     <!-- Text container -->
     <div class="row">
-        <div class="col-md-12 style='height: 200px;'">
+        <div class="col-md-12" style='height: 520px;'>
             <h3>Analysing please wait...</h3>
         </div>
     </div>
