added div box container for div

--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -1,6 +1,17 @@
-<div class="container text-center" id='loader' style='display: none;'>
-  <object id="svgObject" type="image/svg+xml" class="img-fluid" width='70%'></object>
-  <h3>Analysing please wait...</h3>
+<div class="container text-center" id="loader" style="display: none;">
+  <!-- Animation container -->
+  <div class="row">
+      <div class="col-md-12" style='height: 520px;'>
+          <object id="svgObject" type="image/svg+xml" class="img-fluid" width="70%"></object>
+      </div>
+  </div>
+  
+  <!-- Text container -->
+  <div class="row">
+      <div class="col-md-12" style='height: 300px;'>
+          <h3>Creating please wait...</h3>
+      </div>
+  </div>
 </div>
 
 <div id="ana_cre_create">
