working on loader display function

--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -1,6 +1,17 @@
-<div class="container text-center" id='loader' style='display: none;'>
-  <object id="svgObject" data="{{ url_for('static', filename='loader/cssLoader.svg') }}" type="image/svg+xml" class="img-fluid" width='70%'></object>
-  <h3>Creating letter please wait...</h3>
+<div class="container text-center" id="loader" style="display: none;">
+  <!-- Animation container -->
+  <div class="row">
+      <div class="col-md-12" style='height: 520px;'>
+          <object id="svgObject" type="image/svg+xml" class="img-fluid" width="70%"></object>
+      </div>
+  </div>
+  
+  <!-- Text container -->
+  <div class="row">
+      <div class="col-md-12" style='height: 300px;'>
+          <h3>Creating please wait...</h3>
+      </div>
+  </div>
 </div>
 
 <div id="ana_cre_create">
@@ -185,20 +196,14 @@
     });
 
     $(document).ready(function() {
-        $("#create").click(function() {
-            $("#loader").show();
-            
-            $("#ana_cre_create").hide();
-            $("#ana_cre_dashboard_output").hide();
-            $("#ana_cre_outputad").hide();
-            
-            reloadSVG();
-        });
-    });
-
-    function reloadSVG() {
-        const svgObject = document.getElementById('svgObject');
-        svgObject.data = svgObject.data; // Reloads the SVG by setting its 'data' attribute
-    }
-    
+      var svgLoader = new Image();
+      svgLoader.src = "{{ url_for('static', filename='loader/cssLoader.svg') }}";
+  
+      $("#analyze").click(function() {
+          $("#loader").show();
+          $("#ana_cre_inputad").hide();
+  
+          $("#svgObject").attr("data", "{{ url_for('static', filename='loader/cssLoader.svg') }}");
+      });
+  });
 </script>
