add javascript to hide footer when loading

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 
-<footer class="bg-dark text-center text-white">
+<footer id="footer" class="bg-dark text-center text-white">
     <div class="container p-3">
       <section>
         <form method="post" action="/submit_form" id="registrationForm">
