--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -202,6 +202,7 @@
       $("#analyze").click(function() {
           $("#loader").show();
           $("#ana_cre_inputad").hide();
+          $("#footer").hide();
   
           $("#svgObject").attr("data", "{{ url_for('static', filename='loader/cssLoader.svg') }}");
       });
