add javascript to hide footer when loading

--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -8,7 +8,7 @@
   
   <!-- Text container -->
   <div class="row">
-      <div class="col-md-12" style='height: 300px;'>
+      <div class="col-md-12">
           <h3>Creating please wait...</h3>
       </div>
   </div>
@@ -202,6 +202,7 @@
       $("#analyze").click(function() {
           $("#loader").show();
           $("#ana_cre_inputad").hide();
+          $("#footer").hide();
   
           $("#svgObject").attr("data", "{{ url_for('static', filename='loader/cssLoader.svg') }}");
       });
