--- a/website/templates/analysis_create/ana_cre_inputad.html
+++ b/website/templates/analysis_create/ana_cre_inputad.html
@@ -8,7 +8,7 @@
     
     <!-- Text container -->
     <div class="row">
-        <div class="col-md-12" style='height: 300px;'>
+        <div class="col-md-12">
             <h3>Analysing please wait...</h3>
         </div>
     </div>
@@ -42,6 +42,7 @@
         $("#analyze").click(function() {
             $("#loader").show();
             $("#ana_cre_inputad").hide();
+            $("#footer").hide();
     
             $("#svgObject").attr("data", "{{ url_for('static', filename='loader/cssLoader.svg') }}");
         });
