--- a/website/templates/analysis_create/ana_cre_inputad.html
+++ b/website/templates/analysis_create/ana_cre_inputad.html
@@ -1,14 +1,14 @@
 <div class="container text-center" id="loader" style="display: none;">
     <!-- Animation container -->
     <div class="row">
-        <div class="col-md-12" style='height: 520px;'>
+        <div class="col-md-12" style='height: 100%;'>
             <object id="svgObject" type="image/svg+xml" class="img-fluid" width="70%"></object>
         </div>
     </div>
     
     <!-- Text container -->
     <div class="row">
-        <div class="col-md-12" style='height: 300px;'>
+        <div class="col-md-12">
             <h3>Analysing please wait...</h3>
         </div>
     </div>
