updated the error message in the infomation

--- a/website/templates/analysis_create/ana_cre_dashboard_output.html
+++ b/website/templates/analysis_create/ana_cre_dashboard_output.html
@@ -287,8 +287,9 @@
 <script>
   $(document).ready(function() {
     if ((myChart1Initialized === false) && (myChart2Initialized === false) && (myChart3Initialized === false)) {
-      console.log("workexp-donut-chart is hidden");
-      $('#message-container').text('No data available for the chart.');
+      $('#message-container').text(
+        'Boost the data analytics capabilities of the website by creating your profile. This empowers the platform to provide insightful skill-to-job comparisons, aiding you in your career decisions. Unleash the full potential of data-driven insights – add your profile now!'
+      );
     } 
   });
 </script>
