changing size of animation loader div

--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -8,7 +8,7 @@
   
   <!-- Text container -->
   <div class="row">
-      <div class="col-md-12" style='height: 300px;'>
+      <div class="col-md-12">
           <h3>Creating please wait...</h3>
       </div>
   </div>
