--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,9 +26,7 @@
     />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/popper.js@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js" integrity="sha384-ToszPY8B9zpBb0KKhP2j3h/XyKtu8uyDVIaIwfl1q5G5Fsd5SY6f8p00JECfUKF5" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <title>{% block title %}Home{% endblock %}</title>
 
   </head>
